Spelling and tweaks

--- a/compiling/compiling.ipynb
+++ b/compiling/compiling.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "## Circuit compilation\n",
     "\n",
-    "To understand hwo the compiler works we will consider a six-qubit GHZ state writen so that a single-qubit requires $5$-partite connectivity; outside the maximum Heavy-hex topology connectivity of 3.  Thus this circuit will require swap gates to satisfy the topology constraints."
+    "To understand how the compiler works we will consider a six-qubit GHZ state written so that a single-qubit requires $5$-partite connectivity; outside the maximum Heavy-hex topology connectivity of 3.  Thus this circuit will require swap gates to satisfy the topology constraints."
    ]
   },
   {
@@ -256,7 +256,7 @@
     "1. Express circuit in terms of systems native gate set.\n",
     "\n",
     "\n",
-    "2. Select the intial virtual to physical qubit mapping.\n",
+    "2. Select the initial virtual to physical qubit mapping.\n",
     "\n",
     "\n",
     "3. Add SWAP gates to circuit to satisfy topology.\n",
@@ -272,7 +272,7 @@
    "source": [
     "### System basis gates\n",
     "\n",
-    "Quantum computation greatly benefits from the fact that any computation can be written in terms of polynomial numbers of gates selected from a universal gate set that itself is comprised of a finite number of elements.  This \"digitizes\" the computation into successive steps.  Alternatives are a \"pulse\" based, continuous evolution, or ideally, going from initial to final state in a single step by forming the exact desired unitary.  This latter option is rarely, if ever, acheivable do to physical constraints, amonst other complications."
+    "Quantum computation greatly benefits from the fact that any computation can be written in terms of polynomial numbers of gates selected from a universal gate set that itself is comprised of a finite number of elements.  This \"digitizes\" the computation into successive steps.  Alternatives are a \"pulse\" based, continuous evolution, or ideally, going from initial to final state in a single step by forming the exact desired unitary.  This latter option is rarely, if ever, achievable do to physical constraints, amongst other complications."
    ]
   },
   {
@@ -334,7 +334,7 @@
     "5.  On IBM Quantum systems, the identity gate `id` currently is represented as an idle time of the same width as an `sx` gate.  \n",
     "\n",
     "\n",
-    "6.  `reset` is not actually a gate (non-unitary) but is here due to legacy implimentation issues."
+    "6.  `reset` is not actually a gate (non-unitary) but is here due to legacy implementation issues."
    ]
   },
   {
@@ -379,7 +379,7 @@
    "id": "8c537c9b",
    "metadata": {},
    "source": [
-    "For a generic 1Q gate, the worst-case decomposition is comprised of two `sx` gates and three virtual `rz` rotations of various anagles:"
+    "For a generic 1Q gate, the worst-case decomposition is comprised of two `sx` gates and three virtual `rz` rotations of various angles:"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "source": [
     "### Initial qubit layout\n",
     "\n",
-    "The qubits in a ciruit are \"virtual\" qubits in that they exist in abstract only.  To perform the actual computation we must must map these virtual qubits onto the physical qubits of the target quantum system.  There is no unique way to do this, the mapping need only be bijective, and the choice of `initial_layout` can greatly affect the performance of later SWAP mapping, as well as overall fidelity is the selected qubits are overly error prone."
+    "The qubits in a circuit are \"virtual\" qubits in that they exist in abstract only.  To perform the actual computation we must must map these virtual qubits onto the physical qubits of the target quantum system.  There is no unique way to do this, the mapping need only be bijective, and the choice of `initial_layout` can greatly affect the performance of later SWAP mapping, as well as overall fidelity is the selected qubits are overly error prone."
    ]
   },
   {
@@ -449,7 +449,7 @@
     "The initial virtual -> physical mapping can be manually set using the `initial_layout` argument in `transpile`.  This variable takes a list, amongst other options, where the 0th element tells the transpiler which physical qubit to map virtual qubit 0 to, etc.\n",
     "\n",
     "\n",
-    "Because virtual qubit 0 needs large amounts of connectivity lets map it to physical qubit 1, and then select the other qubits so that they are nearest neighboor as possible."
+    "Because virtual qubit 0 needs large amounts of connectivity lets map it to physical qubit 1, and then select the other qubits so that they are nearest neighbor as possible."
    ]
   },
   {
@@ -756,7 +756,7 @@
    "id": "57a1d36e",
    "metadata": {},
    "source": [
-    "2. For repeatibility the best circuit can be saved  Or instead, one can transpile multiple times fixing the `seed_transpiler` option with a list of specified integers.  The integer seeds the random number generator used by the SWAP mapper, and allows you to reproduce the circuit again."
+    "2. For repeatability the best circuit can be saved  Or instead, one can transpile multiple times fixing the `seed_transpiler` option with a list of specified integers.  The integer seeds the random number generator used by the SWAP mapper, and allows you to reproduce the circuit again."
    ]
   },
   {
@@ -872,7 +872,7 @@
    "source": [
     "##  Setting the level of optimization\n",
     "\n",
-    "Much like standard compiler toolchains where one can specific the level of code optimization, e.g. `-O3`, it is possible to specify the level of quantum circuit optimization that `transpile` performs via the `optimization_level` keyword argument where the level is specified by an integer from 0 to 3.  The basic overview of each option is as follows: "
+    "Much like standard compiler tool chains where one can specific the level of code optimization, e.g. `-O3`, it is possible to specify the level of quantum circuit optimization that `transpile` performs via the `optimization_level` keyword argument where the level is specified by an integer from 0 to 3.  The basic overview of each option is as follows: "
    ]
   },
   {
@@ -995,7 +995,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-danger\">\n",
-    "$\\texttt{optimization_level=3}$ in Qiskit 0.18+ internally uses an implicit approximation for decomposing unitary gates.  These approximations break the notion of unitary equivilence in the transpiler and can lead to invalid results in some cases.\n",
+    "$\\texttt{optimization_level=3}$ in Qiskit 0.18+ internally uses an implicit approximation for decomposing unitary gates.  These approximations break the notion of unitary equivalence in the transpiler and can lead to invalid results in some cases.\n",
     "</div>"
    ]
   },
@@ -1100,7 +1100,7 @@
    "source": [
     "## Being smarter\n",
     "\n",
-    "Often there is a smarter way to encode a circuit given knowledge of the topology and/or feature set of the system.  In the case of our GHZ state it is possible to rewrite the circuit to match a linear nearest-neighboor topology, and thus require no additonal SWAP gates on most IBM Quantum systems."
+    "Often there is a smarter way to encode a circuit given knowledge of the topology and/or feature set of the system.  In the case of our GHZ state it is possible to rewrite the circuit to match a linear nearest-neighbor topology, and thus require no additional SWAP gates on most IBM Quantum systems."
    ]
   },
   {
@@ -1214,7 +1214,7 @@
    "id": "ad28b7ad",
    "metadata": {},
    "source": [
-    "However, because the BV circuit uses phase kickback that leaves the target qubit unentangled, the circuit is really comprised of only two qubit interactions, and could be greatly simplified if we are able to measure and reset qubits.  Fortunetly IBM Quantum systems can do this, and one can rewrite this circuit as a [dynamic BV circuit](https://nonhermitian.org/posts/2021/2021-10-27-dynamic_BV.html)."
+    "However, because the BV circuit uses phase kickback that leaves the target qubit unentangled, the circuit is really comprised of only two qubit interactions, and could be greatly simplified if we are able to measure and reset qubits.  Fortunately IBM Quantum systems can do this, and one can rewrite this circuit as a [dynamic BV circuit](https://nonhermitian.org/posts/2021/2021-10-27-dynamic_BV.html)."
    ]
   },
   {
