--- a/measurement_mitigation/measurement_mitigation.ipynb
+++ b/measurement_mitigation/measurement_mitigation.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "For short-depth near term applications, measurement errors can greatly affect the computation of expectation values and other quantities on today's quantum systems.  M3 allows one to easily mitigate these measurement errors up to numbers of qubits that are otherwise out of reach for other mitigation methods.  Mitigation invloves three steps:\n",
+    "For short-depth near term applications, measurement errors can greatly affect the computation of expectation values and other quantities on today's quantum systems.  M3 allows one to easily mitigate these measurement errors up to numbers of qubits that are otherwise out of reach for other mitigation methods.  Mitigation involves three steps:\n",
     "\n",
     "1. Construct a mitigator targeting a backend (`backend`)."
    ]
@@ -50,7 +50,7 @@
    "id": "1ef23380",
    "metadata": {},
    "source": [
-    "2. Use the mitigator to calibate over a list of physical qubits (`qubits`) measured\n",
+    "2. Use the mitigator to calibrate over a list of physical qubits (`qubits`) measured\n",
     "\n",
     "\n",
     "```python\n",
@@ -75,7 +75,7 @@
    "id": "16f3b946",
    "metadata": {},
    "source": [
-    "These quasiprobabilities can then be used directly to compute expectation values.  A complete users guide can be found in the [M3 documentation](https://qiskit.org/documentation/partners/mthree)."
+    "These quasiprobabilities can then be used directly to compute expectation values.  A complete users guide can be found in the [M3 documentation](https://qiskit.org/documentation/partners/mthree).  Additionally, M3 can called as an option in the Qiskit runtime base programs."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "Although the power of quantum computation lies in the ability to create large amounts of entanglement and explore large swaths of Hilbert space, at the end of the day the result encoded in the terminal quantum state must be converted to classical information by meauring the qubits.  There is also the possibility of mid-circuit measurements, but we will not address those here.\n",
+    "Although the power of quantum computation lies in the ability to create large amounts of entanglement and explore large swaths of Hilbert space, at the end of the day the result encoded in the terminal quantum state must be converted to classical information by measuring the qubits.  There is also the possibility of mid-circuit measurements, but we will not address those here.\n",
     "\n",
     "Measurements are not perfect and have a non-negligible amount of error associated with them (taken from PRX Quantum 2, 040326 (2021))"
    ]
@@ -137,7 +137,7 @@
    "id": "2553f76d",
    "metadata": {},
    "source": [
-    "Each qubit of a quantum system has its own measurement error rates and, due to the differece in energy between the $|0\\rangle$ and $|1\\rangle$ states, there is a different error rate depending on which of these two states the qubit was supposed to be measured in"
+    "Each qubit of a quantum system has its own measurement error rates and, due to the difference in energy between the $|0\\rangle$ and $|1\\rangle$ states, there is a different error rate depending on which of these two states the qubit was supposed to be measured in"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "id": "47a82d0d",
    "metadata": {},
    "source": [
-    "Measurement errors take a given target bitstring, eg. `110011`, and probabalistically map it to other bitstrings that are close to the target in terms of Hamming distance.  Because a generic quantum circuit can yield any one of $2^{N}$ bitstrings, where $N$ is the number of qubits measured, characterizing this process requires prepping each computational basis state and measuring output bitstrings.  The resulting matrix that gets generated is called the assignment (A)-matrix (or T-matrix, or confusion matrix) (taken from PRX Quantum 2, 040326 (2021)):"
+    "Measurement errors take a given target bitstring, eg. `110011`, and probabilistically map it to other bitstrings that are close to the target in terms of Hamming distance.  Because a generic quantum circuit can yield any one of $2^{N}$ bitstrings, where $N$ is the number of qubits measured, characterizing this process requires prepping each computational basis state and measuring output bitstrings.  The resulting matrix that gets generated is called the assignment (A)-matrix (or T-matrix, or confusion matrix) (taken from PRX Quantum 2, 040326 (2021)):"
    ]
   },
   {
@@ -177,9 +177,9 @@
     "\n",
     "for $\\vec{p}_{\\rm ideal}$, where $\\vec{p}_{\\rm noisy}$ is the raw output from the quantum computer in vector form, and $\\vec{p}_{\\rm ideal}$ is the target distribution representing no measurement errors, but still includes other sources of imperfection such as gate errors.\n",
     "\n",
-    "Since computing the full A-matrix requires $2^{N}$ circuits, it does not scale beyond a handful of qubits.  To get around this we will assume that the measurement error one one qubit is not affected by other qubits; there is no correlation between qubit readouts.  With this approximation, which is quite valid on IBM Quantum systems, it is possible to construct the A-matrix using as few as two circuits. While this is great progress, the dimensions of the A-matrix still grow as $2^{N}$ and therefore constructing the matrix is still prohibatively expensive.  Here we will use a method that bypasses these limitations, and can scale well beyond conventional methods: [PRX Quantum 2, 040326 (2021)](https://doi.org/10.1103/PRXQuantum.2.040326).\n",
+    "Since computing the full A-matrix requires $2^{N}$ circuits, it does not scale beyond a handful of qubits.  To get around this we will assume that the measurement error one one qubit is not affected by other qubits; there is no correlation between qubit readouts.  With this approximation, which is quite valid on IBM Quantum systems, it is possible to construct the A-matrix using as few as two circuits. While this is great progress, the dimensions of the A-matrix still grow as $2^{N}$ and therefore constructing the matrix is still prohibitively expensive.  Here we will use a method that bypasses these limitations, and can scale well beyond conventional methods: [PRX Quantum 2, 040326 (2021)](https://doi.org/10.1103/PRXQuantum.2.040326).\n",
     "\n",
-    "Depending on the solution method, the output $\\vec{p}_{\\rm ideal}$ is not guarenteed to be a physical probability vector.  Rather it is usually a vector of quasiprobabilities; a distribution that contains negative values but still sums to one.  Luckily this does not matter when computing expectation values, and we can use these quasiprobabilities directly in our calculations."
+    "Depending on the solution method, the output $\\vec{p}_{\\rm ideal}$ is not guaranteed to be a physical probability vector.  Rather it is usually a vector of quasiprobabilities; a distribution that contains negative values but still sums to one.  Luckily this does not matter when computing expectation values, and we can use these quasiprobabilities directly in our calculations."
    ]
   },
   {
@@ -213,7 +213,7 @@
    "id": "a300858f",
    "metadata": {},
    "source": [
-    "Because we are able to measure only in the computational basis, expectation values must be over only those operators that are diagonal in this basis.  We will also assume that the spectral radius of the oprators is one, and that any coefficients can be multiplied later in via classical post-processing.  Many operators of interest already statisfy this:\n",
+    "Because we are able to measure only in the computational basis, expectation values must be over only those operators that are diagonal in this basis.  We will also assume that the spectral radius of the operators is one, and that any coefficients can be multiplied later in via classical post-processing.  Many operators of interest already satisfy this:\n",
     "\n",
     "$$\n",
     "Z = \\begin{bmatrix} 1 & 0 \\\\ 0 & -1\\end{bmatrix}; \\ \\ I = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1\\end{bmatrix}; P_{0} = \\begin{bmatrix} 1 & 0 \\\\ 0 & 0\\end{bmatrix}; P_{1} = N = \\begin{bmatrix} 0 & 0 \\\\ 0 & 1\\end{bmatrix};\n",
@@ -267,7 +267,7 @@
    "source": [
     "### Computing expectation values\n",
     "\n",
-    "We now turn to the question of how to compute the expectation value of a given operator from data returned by the quantum computer.  Coming back to the BV circuit discussed earlier, we see that at the end of the algorithm all the qubits used for encoding the secret bitstring have a Hadamard gate followed by a measurement.  From our explaination above we see this to be nothing more than measuring each of the qubits in the x-basis. "
+    "We now turn to the question of how to compute the expectation value of a given operator from data returned by the quantum computer.  Coming back to the BV circuit discussed earlier, we see that at the end of the algorithm all the qubits used for encoding the secret bit-string have a Hadamard gate followed by a measurement.  From our explanation above we see this to be nothing more than measuring each of the qubits in the x-basis. "
    ]
   },
   {
@@ -362,7 +362,7 @@
    "id": "92ec52dd",
    "metadata": {},
    "source": [
-    "Having applied the rotation gates at the end of the circuit, we left with computing the expectation value of the operator $\\langle ZZZZZ\\rangle$.  Let us take the bitstring `'10110'` as an explciit example.  First we compute the probability of being found in that state:"
+    "Having applied the rotation gates at the end of the circuit, we left with computing the expectation value of the operator $\\langle ZZZZZ\\rangle$.  Let us take the bit-string `'10110'` as an explicit example.  First we compute the probability of being found in that state:"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "id": "04e7fd09",
    "metadata": {},
    "source": [
-    "Next we need to determine the coefficient that multiples this probability.  Because the total operator is composed using the tensor product of diagonal operators, in this case $Z_{N-1}\\otimes\\dots\\otimes Z_{0}$ (per the IBM bit-ordering convention) we can obtain this value directly from the eigenvalues (diagonal elements) of the sub-matrices specified by the bitstring.\n",
+    "Next we need to determine the coefficient that multiples this probability.  Because the total operator is composed using the tensor product of diagonal operators, in this case $Z_{N-1}\\otimes\\dots\\otimes Z_{0}$ (per the IBM bit-ordering convention) we can obtain this value directly from the eigenvalues (diagonal elements) of the sub-matrices specified by the bit-string.\n",
     "\n",
     "Defining $z_{0}=Z[0,0]=1$ and $z_{1}=Z[1,1]=-1$ we have"
    ]
@@ -427,7 +427,7 @@
    "id": "4397e2b1",
    "metadata": {},
    "source": [
-    "Then the contribution to the expectation value from that bitstring is simply"
+    "Then the contribution to the expectation value from that bit-string is simply"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "id": "716a03b1",
    "metadata": {},
    "source": [
-    "Although we have focused on probabilties, the above expectation value routine is equally valid if we input quasiprobabilities in place of `counts` (provided they are both represented by a Python dictionary).  Therefore the introduction of measurement mitigation to routines that compute expectation values is nomially a very simple task."
+    "Although we have focused on probabilities, the above expectation value routine is equally valid if we input quasiprobabilities in place of `counts` (provided they are both represented by a Python dictionary).  Therefore the introduction of measurement mitigation to routines that compute expectation values is nomially a very simple task."
    ]
   },
   {
@@ -578,11 +578,11 @@
    "id": "e839b181",
    "metadata": {},
    "source": [
-    "Qiskit itself contains [a collection of methods](https://qiskit.org/documentation/apidoc/mitigation.html) that explicitly contruct the A-matrix but none the less might be valuable for small numbers of qubits.  However, this functionality is deprecated, and is not maintained.  M3 gets around the explicit construction of the full $2^{N}$ A-matrix via a information preserving truncation step (taken from PRX Quantum 2, 040326 (2021))\n",
+    "Qiskit itself contains [a collection of methods](https://qiskit.org/documentation/apidoc/mitigation.html) that explicitly construct the A-matrix but none the less might be valuable for small numbers of qubits.  However, this functionality is deprecated, and is not maintained.  M3 gets around the explicit construction of the full $2^{N}$ A-matrix via a information preserving truncation step (taken from PRX Quantum 2, 040326 (2021))\n",
     "\n",
     "<img src=\"imgs/m3-truncation.png\" width=900 height=400 />\n",
     "\n",
-    "that reduces the dimensionality to be equal to the number of unique bit-strings  in the noisy output distribution.  If the number of unique bit-strings is itself too large for explicit matrix construction then M3 will exploit the structure of the A-matrix to efficiently solve the linear system via matrix-free iterative methods.  This all sounds complicated, however the actual usage of M3 is strightforward and best demonstrated via examples. "
+    "that reduces the dimensionality to be equal to the number of unique bit-strings  in the noisy output distribution.  If the number of unique bit-strings is itself too large for explicit matrix construction then M3 will exploit the structure of the A-matrix to efficiently solve the linear system via matrix-free iterative methods.  This all sounds complicated, however the actual usage of M3 is straightforward and best demonstrated via examples. "
    ]
   },
   {
@@ -732,7 +732,7 @@
    "id": "4a5e0e44",
    "metadata": {},
    "source": [
-    "We now need to get some actual data to work with so let us now append measurements to our circuit above, transpile it, and run it on the target backend.  Note that as we have pre-arranged things so that the problem matches the system topology, and we do not benefit from block-collection, so we do not need to run `optimization_level=3` here."
+    "We now need to get some actual data to work with so let us now append measurements to our circuit above, transpile it, and run it on the target backend.  Note that as we have prearranged things so that the problem matches the system topology, and we do not benefit from block-collection, so we do not need to run `optimization_level=3` here."
    ]
   },
   {
@@ -839,7 +839,7 @@
    "source": [
     "### Mitigating transpiled circuits\n",
     "\n",
-    "We have seen that SWAP mapping (transpiling) a circuit nominally permutes the assignment of qubits at the end of a circuit from the `initial_layout` that was supplied by the user or autogenerated.  Going back to our GHZ example:"
+    "We have seen that SWAP mapping (transpiling) a circuit nominally permutes the assignment of qubits at the end of a circuit from the `initial_layout` that was supplied by the user or auto-generated.  Going back to our GHZ example:"
    ]
   },
   {
@@ -1100,7 +1100,10 @@
     "2. One can correct multiple circuits at once by supplying a list of circuits and  measured qubits or mappings to `apply_correction`.\n",
     "\n",
     "\n",
-    "3. M3 has a host of other features detailed in the documentation: https://qiskit.org/documentation/partners/mthree"
+    "3. M3 has a host of other features detailed in the documentation: https://qiskit.org/documentation/partners/mthree\n",
+    "\n",
+    "\n",
+    "4. M3 mitigation can be called seamlessly from the Qiskit runtime."
    ]
   },
   {
